{
    "name": "Player_IA",
    "maps": [
        {
            "name": "Player",
            "id": "514c2ecb-21e0-47fe-ba01-c74518722bbd",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "746fe211-4d2a-4ab8-9d61-d7c226a37341",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "8c2ec363-25d2-4248-b81f-e8ce29891447",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "44174ac6-2307-4c54-baaa-cb1ffdf991a2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9ea474e-d571-4a36-9d23-6457285d8496",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25c13e34-f538-4d81-8467-38f2e6bf23fe",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}